--- a/stocksystem.css
+++ b/stocksystem.css
@@ -10,8 +10,12 @@ body {
 
 .navbar {
     background-color: rgb(73, 7, 73);
+    padding-left: 45%;
     overflow: hidden;
 }
+
+
+
 
 .navbar ul {
     list-style-type: none;
@@ -120,3 +124,5 @@ form input[type="submit"] {
 form input[type="submit"]:hover {
     background-color: #a19c9c;
 }
+
+
