--- a/CSS Images/style.css
+++ b/CSS Images/style.css
@@ -8,8 +8,22 @@ h1{
     padding: 22px 18px;
 }
 
-nav>ul{
+main{
+    display: flex;
+    padding-bottom: 2cm;
+    color: rgb(152, 82, 150);
+    font-family: Arial, Helvetica, sans-serif;
+    height: auto;
+    line-height: 3cm;
+}
+
+nav{
     background-color: rgb(255, 231, 254);
+}
+
+table{
+    border-style: solid;
+    border-color:blueviolet;
 }
 
 #filter {
@@ -32,8 +46,6 @@ nav>ul{
 ul{
     list-style-type: none;
     overflow: hidden;
-    background-color: rgb(255, 255, 255);
-    position: fixed;
     top: 0%;
     width: 100%;
 }
@@ -109,12 +121,4 @@ li a:hover{
   
 .show {
     display: block;
-}
-
-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    line-height: 10cm;
 }
