--- a/CSS Images/style.css
+++ b/CSS Images/style.css
@@ -34,14 +34,41 @@ h1{
     font-size: 35px;
 }
 
-.column {
-    float: left;
-    width: 24%;
-    padding: 5px;
-  }
-  
-  .row::after {
+
+
+.row::after {
     content: "";
     display: table;
-  }
+    clear: both;
+}
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 0px;
+}
+
+.column {
+    flex: 1;
+    padding: 5px;
+}
+
+
+.column img {
+    max-width: 100%;
+    height: auto;
+}
+
+nav{
+    position: fixed;
+    padding-bottom: 100px;
+}
+
+.row h1{
+    color: blueviolet;
+}
+
+.carousel{
+    padding-top: 35px;
+}
+    
 
