--- a/CSS Images/style.css
+++ b/CSS Images/style.css
@@ -34,43 +34,113 @@ h1{
     font-size: 35px;
 }
 
-
-
-.row::after {
-    content: "";
-    display: table;
-    clear: both;
-}
-.row {
-    display: flex;
-    flex-wrap: wrap;
-    padding-bottom: 0px;
-}
-
 .column {
-    flex: 1;
+    float: left;
+    width: 24%;
     padding: 5px;
-}
+  }
+  
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
 
+  * {
+    box-sizing: border-box;
+  }
+  
+  /* Style the search field */
+  form.example input[type=text] {
+    padding: 10px;
+    font-size: 17px;
+    border: 1px solid grey;
+    float: left;
+    width: 80%;
+    background: #f1f1f1;
+  }
+  
+  /* Style the submit button */
+  form.example button {
+    float: left;
+    width: 20%;
+    padding: 10px;
+    background:  rgb(152, 82, 150);
+    color: white;
+    font-size: 17px;
+    border: 1px solid grey;
+    border-left: none; /* Prevent double borders */
+    cursor: pointer;
+  }
+  
+  form.example button:hover {
+    background: rgb(152, 82, 150);
+  }
+  
+  /* Clear floats */
+  form.example::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
 
-.column img {
-    max-width: 100%;
-    height: auto;
-}
+  label{
+    font: 12;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+  }
 
-nav{
-    position: fixed;
-    padding-bottom: 100px;
-}
+  filterbox{
+    width: 20%;
+    float: left;
+    margin-left: 20 px;
+    margin-top: 10px;
+    background-color: rgb(232, 232, 232)
+  }
 
-.row h1{
-    color: blueviolet;
-}
+  button{
+    font: 14;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color:  rgb(152, 82, 150);;
+  }
 
-.carousel{
-    padding-top: 35px;
-}
+  h2{
+    font:16;
+    text-align: center;
+    color: rgb(152, 82, 150);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+  }
 
+  h3{
+    font:14;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(152, 82, 150);
+  }
 
+  table{
+    border-collapse: collapse;
+    width: 79%;
+  }
 
+  th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #a5a5a5;
+  }
 
+  th{
+    font: 14;
+    color: rgb(152, 82, 150);
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  td{
+    font: 12;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  tr:hover {background-color:rgb(244, 226, 244);}
