--- a/styleforeditacctount.css
+++ b/styleforeditacctount.css
@@ -6,7 +6,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgb(152, 82, 150, 0.5);
+    background: rgba(152, 82, 150, 0.5);
     z-index: 1000;
 }
 
@@ -56,7 +56,7 @@ textarea {
     box-sizing: border-box;
 }
 
-input[type="submit"] {
+input[type="submit"]{
     width: 100%;
     padding: 10px;
     background: rgb(152, 82, 150);
@@ -67,8 +67,20 @@ input[type="submit"] {
     transition: background-color 0.3s ease;
 }
 
-input[type="submit"]:hover {
+input[type="submit"]:hover,
+.button-open-menu:hover {
     background-color: #005f6b;
+}
+
+.button-open-menu {
+    width: 100%;
+    padding: 10px;
+    background: rgb(152, 82, 150);
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 .popup-menu h3 {
@@ -84,8 +96,8 @@ input[type="submit"]:hover {
 .popup-menu ul {
     list-style-type: none;
     padding: 0;
-    
 }
 
 .popup-menu ul li {
-    margin-bottom:
+    margin-bottom: 10px;
+}
