--- a/userside/CSS/browse.css
+++ b/userside/CSS/browse.css
@@ -1,32 +1,3 @@
-ul{
-  list-style-type: none;
-  margin:0;
-  padding:0;
-  overflow: hidden;
-  background-color: rgb(255, 255, 255);
-  position: fixed;
-  top: 0%;
-  width: 100%;
-}
-
-li{
-  float: left;
-}
-
-li a{
-  display: block;
-  color: rgb(152, 82, 150);
-  text-align: center;
-  padding: 22px 18px;
-  text-decoration: none;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-}
-
-li a:hover{
-  background-color: rgb(227, 224, 227);
-}
-
 h1{
   color: rgb(152, 82, 150);
   font-family: Arial, Helvetica, sans-serif;
@@ -70,7 +41,7 @@ form.searchbox button {
   color: white;
   font-size: 17px;
   border: 1px solid grey;
-  border-left: none; /* Prevent double borders */
+  border-left: none;
   cursor: pointer;
 }
   
@@ -95,6 +66,7 @@ div#searchresult{
   display: flex;
 }
 
+/* Filter */
 div#filter{
   width: 20%;
   height: 50%;
@@ -120,6 +92,7 @@ div#filter>div{
   display: block;
 }
 
+/* Search results*/
 div#productlist{
   display: flex;
   width: 75%;
