homepage footer done, if there is anything to be corrected tell me guys. the account page will be commited tomorrow as well.

--- a/userside/CSS/hp.css
+++ b/userside/CSS/hp.css
@@ -34,3 +34,13 @@ h1{
 .carousel{
     padding-top: 35px;
 }
+
+.footer{
+    background-color: blueviolet;
+    color: white;
+    text-align: center;
+    padding: lem;
+    margin-top: auto;
+    bottom: 0;
+    width: 100%;
+}
