changed 1em to 20px

--- a/userside/CSS/hp.css
+++ b/userside/CSS/hp.css
@@ -36,10 +36,10 @@ h1{
 }
 
 .footer{
-    background-color: blueviolet;
+    background-color: white;
     color: white;
     text-align: center;
-    padding: lem;
+    padding: 20px;
     margin-top: auto;
     bottom: 0;
     width: 100%;
