--- a/userside/CSS/footer.css
+++ b/userside/CSS/footer.css
@@ -1,9 +1,34 @@
-footer{
-    background-color: blueviolet;
-    color: white;
-    text-align: center;
+.footer-content {
+    display: flex;
+    justify-content: space-around;
+    background-color:  rgb(152, 82, 150);
     padding: 20px;
+}
+
+.footer-section {
+    color: white;
+}
+
+.social-icons {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+}
+
+.social-icons li {
+    margin-right: 15px;
+}
+
+.social-icons img {
+    width: 20px;
+    height: 20px;
+}
+
+.copyright {
+    background-color: white;
+    color: black;
+    text-align: center;
+    padding: 10px;
     margin-top: auto;
-    bottom: 0;
     width: 100%;
 }
