--- a/userside/CSS/hp.css
+++ b/userside/CSS/hp.css
@@ -1,5 +1,5 @@
 h1{
-    color: white;
+    color: rgb(152, 82, 150);
     font-family: Arial, Helvetica, sans-serif;
     padding: 22px 18px;
     font-size: 35px;
