--- a/userside/CSS/navbar.css
+++ b/userside/CSS/navbar.css
@@ -1,9 +1,9 @@
 
-body{
+nav{
     margin: 0px;
 }
 
-ul{
+.nav_list{
     display: flex;
     flex-flow: row nowrap;
     align-items: flex-start;
@@ -18,12 +18,12 @@ ul{
     width: 100%;
 }
 
-li{
+.nav_list>li{
     height: 65px;
     max-height: 100%;
 }
 
-li a{
+.nav_list>li a{
     display: block;
     color: rgb(152, 82, 150);
     text-align: center;
@@ -33,6 +33,6 @@ li a{
     font-weight: bold;
 }
 
-li a:hover{
+.nav_list>li a:hover{
     background-color: rgb(227, 224, 227);
 }
