--- a/employee.css
+++ b/employee.css
@@ -83,6 +83,11 @@ table {
     width: 100%;
     border-collapse: collapse;
 }
+
+table, tr, th, td {
+    border: 1px solid black;
+}
+
 th, td {
     border: 1px solid #ddd;
     padding: 8px;
