--- a/employee.css
+++ b/employee.css
@@ -104,7 +104,7 @@ tr:nth-child(even) {
     text-decoration: none;
 }
 
-.product-image{
+.product-image img{
     max-width: 75px;
     max-height: 50px;
 }
